--- a/Api/OMMFCM/composer.json
+++ b/Api/OMMFCM/composer.json
@@ -13,8 +13,14 @@
 			"app/models",
 			"app/database/migrations",
 			"app/database/seeds",
-			"app/tests/TestCase.php"
-		]
+			"app/tests/TestCase.php",
+			"app/services"
+		],
+		"psr-0": {
+            "services": "app/services"
+        }
+
+
 	},
 	"scripts": {
 		"post-install-cmd": [
