--- a/Api/OMMFCM/composer.json
+++ b/Api/OMMFCM/composer.json
@@ -4,7 +4,8 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.1.*"
+		"laravel/framework": "4.1.*",
+        "eventviva/php-image-resize": "1.5.*"
 	},
 	"autoload": {
 		"classmap": [
