--- a/Clientes/Apps/Android/ommfcm/app/src/main/AndroidManifest.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/AndroidManifest.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.george.ommfcm">
+    package="com.example.george.ommfcm" >
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -14,29 +18,44 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         >
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCjf595AjHcxVjZVWlNsgrGjUFIoOdO12A" />
+
         <activity
             android:name=".ActividadLogo"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".ActividadPrincipal"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".ActividadFormulario"
-            android:label="@string/title_activity_actividad_formulario" >
+            android:label="@string/title_activity_actividad_formulario"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".ActividadConfirmacion"
-            android:label="@string/title_activity_actividad_confirmacion" >
+            android:label="@string/title_activity_actividad_confirmacion"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".ActividadVistaPrevia"
-            android:label="@string/title_activity_actividad_vista_previa" >
+            android:label="@string/title_activity_actividad_vista_previa"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".ActividadMapa"
+            android:label="@string/title_activity_actividad_mapa"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
