Pruebas Unitarias controlador de incidentes
Se agregaron las pruebas unitarias del controlador de incidentes.
Varias pruebas fallaron, se corregirá el controlador en el siguiente
PR.

--- a/Api/OMMFCM/composer.json
+++ b/Api/OMMFCM/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.1.*",
-        "eventviva/php-image-resize": "1.5.*"
+        "eventviva/php-image-resize": "1.5.*",
+        "mockery/mockery": "dev-master@dev"
 	},
 	"autoload": {
 		"classmap": [
