--- a/Clientes/Apps/Android/ommfcm/app/src/main/AndroidManifest.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/appicon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        >
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCjf595AjHcxVjZVWlNsgrGjUFIoOdO12A" />
@@ -24,7 +25,8 @@
         <activity
             android:name=".ActividadLogo"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,29 +36,37 @@
         <activity
             android:name=".ActividadPrincipal"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden|screenSize">
         </activity>
         <activity
             android:name=".ActividadFormulario"
             android:label="@string/title_activity_actividad_formulario"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden|screenSize">
         </activity>
         <activity
             android:name=".ActividadConfirmacion"
             android:label="@string/title_activity_actividad_confirmacion"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden|screenSize">
         </activity>
         <activity
             android:name=".ActividadVistaPrevia"
             android:label="@string/title_activity_actividad_vista_previa"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden|screenSize">
         </activity>
         <activity
             android:name=".ActividadMapa"
             android:label="@string/title_activity_actividad_mapa"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden|screenSize">
         </activity>
-        <activity android:name=".Actividad_mas_info" >
+        <activity
+            android:name=".ActividadInfo"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden|screenSize">
         </activity>
     </application>
 
