--- a/Clientes/Apps/Android/ommfcm/app/src/main/AndroidManifest.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/AndroidManifest.xml
@@ -69,7 +69,9 @@
         </activity>
         <activity
             android:name=".ActividadPrecauciones"
-            android:label="@string/title_activity_actividad_precauciones" >
+            android:label="@string/title_activity_actividad_precauciones"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
