--- a/Clientes/Apps/iOS/OMMFCM/Info.plist
+++ b/Clientes/Apps/iOS/OMMFCM/Info.plist
@@ -42,6 +42,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
