--- a/Clientes/Apps/Android/ommfcm/app/build.gradle
+++ b/Clientes/Apps/Android/ommfcm/app/build.gradle
@@ -1,21 +1,28 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'MyAndroidKey'
+            keyPassword 'watchimt2015'
+            storeFile file('/Users/George/Dropbox/ITESM/9vo_semestre/Bloque/certificado_android.jks')
+            storePassword 'watchimt2015'
+        }
+    }
     compileSdkVersion 22
     buildToolsVersion "21.1.2"
-
     defaultConfig {
-        applicationId "com.example.george.ommfcm"
+        applicationId "com.watchimt.george.ommfcm"
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
 }
@@ -26,5 +33,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:7.8.0'
     testCompile 'org.robolectric:robolectric:3.0'
     testCompile 'junit:junit:4.12'
-    testCompile "org.mockito:mockito-core:1.9.5"
+    testCompile 'org.mockito:mockito-core:1.9.5'
 }
