--- a/Clientes/Apps/Android/ommfcm/app/src/main/AndroidManifest.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.george.ommfcm" >
+    package="com.example.george.ommfcm">
 
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
 
     <permission
-        android:name="com.example.mapdemo.permission.MAPS_RECEIVE"
+        android:name="com.watchimt.george.ommfcm.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -15,9 +15,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="com.example.mapdemo.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="com.watchimt.george.ommfcm.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
 
     <application
@@ -27,7 +28,7 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCjf595AjHcxVjZVWlNsgrGjUFIoOdO12A" />
+            android:value="AIzaSyCVUZO-fwPQfeALfG_zM7RHjmVxxjoCEOo" />
 
         <activity
             android:name=".ActividadLogo"
